# pirmas

./: CMakeLists.txt  README.md  duomenys.cpp  duomenys.h  libr.h  pirma_uzd.cpp  run.bat  saugojimas_masyve.cpp  saugojimas_masyve.h
